[package]
name = "lsfp"
version = "0.4.1"
authors = ["The Noah <thenoahbz@gmail.com>"]
edition = "2018"
description = "Cross-platform alternative to ls, specifically designed for programmers"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/The-Noah/lsfp"
repository = "https://github.com/The-Noah/lsfp"
license-file = "LICENSE"
include = [
  "**/*.rs",
  "Cargo.{toml,lock}",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = ["git", "color"]
config = []
git = ["config"]
color = ["config"]

[dependencies]
