[package]
name = "lsfp"
version = "0.4.3"
authors = ["The Noah <thenoahbz@gmail.com>"]
edition = "2018"
description = "Cross-platform alternative to ls, specifically designed for programmers"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/The-Noah/lsfp"
repository = "https://github.com/The-Noah/lsfp"
license-file = "LICENSE"
include = [
  "**/*.rs",
  "**/*.c",
  "Cargo.{toml,lock}",
  "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = false
codegen-units = 8
opt-level = 2
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false
debug-assertions = false
panic = "abort"
debug = false

[features]
default = ["git", "color"]
config = []
git = ["config"]
color = ["config"]

[dependencies]

[build-dependencies]
cc = "1.0.66"
