[package]
name = "lsfp"
version = "0.5.0"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
edition = "2018"
description = "Cross-platform alternative to ls, specifically designed for programmers"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/The-Noah/lsfp"
repository = "https://github.com/The-Noah/lsfp"
license-file = "LICENSE"
include = ["**/*.rs", "**/*.c", "Cargo.{toml,lock}", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = false
codegen-units = 8
opt-level = 2
overflow-checks = true
debug-assertions = true
incremental = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false
debug-assertions = false
panic = "abort"
debug = false

[features]
default = ["git", "color", "icons", "themes"]
# End user features
git = ["config"]
color = ["config"]
icons = ["config"]
themes = ["index_flags", "home"]
# Internal features
config = []
index_flags = []
home = []

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Console"]
